<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MPDroid</string>
    <string name="server">Server</string>
    <string name="server_summary">Server name or IP</string>
    <string name="use_port">Use Port?</string>
    <string name="use_authentication">Use Authentication?</string>
    <string name="connect">Connect</string>
    <string name="port">Port</string>
    <string name="preferences">MPDroid Settings</string>
    <string name="disconnect">Disconnect</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="volume">Volume</string>
    <string name="mute">Mute</string>
    <string name="now_playing">Now Playing:</string>
    <string name="stop">Stop</string>
    <string name="progress">Progress:</string>
    <string name="repeat">Repeat</string>
    <string name="random">Random</string>
    <string name="auto_connect">Auto Connect</string>
    <string name="server_preferences">Server Settings</string>
    <string name="wifi_auto">Only when using Wifi</string>
    <string name="search_playlist">Search the Playlist</string>
</resources>
