<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <TextView android:id="@+id/server_name"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/server"/>

    <TextView android:id="@+id/port"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/port"/>

    <CheckBox android:id="@+id/use_authentication"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/use_authentication"
              android:checked="false"
              android:enabled="false"
            />

    <Button android:id="@+id/preference"
            android:text="@string/preferences"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />

    <Button android:id="@+id/connect"
            android:text="@string/connect"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />

    <!--<EditText
            android:id="@+id/server_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/server"/>
    <CheckBox
            android:id="@+id/use_port"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_port"/>
    <EditText
            android:id="@+id/port"
            android:singleLine="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="6600"/>
    <CheckBox
            android:id="@+id/use_authentication"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_authentication"/>
    <EditText
            android:id="@+id/password"
            android:singleLine="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:password="true"/>
    <Button
            android:id="@+id/summary"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect"/>
            -->
</LinearLayout>